# pandora_tasks

complex_communication/: CMakeLists.txt  package.xml
complex_communication/launch/: complex_communication.launch
complex_communication/msg/: boardMsg.msg
complex_communication/src/: player.cpp  player.h  server.cpp  server.h
simple_communication/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
simple_communication/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh  simple_communication-msg-extras.cmake.develspace.in  simple_communication-msg-extras.cmake.installspace.in  simple_communication-msg-paths-context.py
simple_communication/catkin_generated/installspace/: simple_communication-msg-paths-context.py  simple_communication-msg-paths.cmake  simple_communication.pc  simple_communicationConfig.cmake
simple_communication/cmake/: simple_communication-genmsg-context.py  simple_communication-genmsg.cmake
simple_communication/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
simple_communication/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
simple_communication/devel/lib/pkgconfig/: simple_communication.pc
simple_communication/devel/share/simple_communication/cmake/: simple_communication-msg-paths.cmake  simple_communicationConfig.cmake
simple_communication/gtest/: CTestTestfile.cmake  Makefile
simple_communication/launch/: simple_communication.launch  simple_communication.launch~
simple_communication/src/: manipulator.cpp  streamer.cpp
simple_robot/: CMakeLists.txt  package.xml
simple_robot/launch/: simple_robot.launch
simple_robot/src/: data_fusion_node.cpp  data_fusion_node.h  robot_pose_server_node.cpp  robot_pose_server_node.h  temperature_node.cpp  temperature_node.h  victim_announce_node.cpp  victim_announce_node.h
simple_robot_msgs/: CMakeLists.txt  package.xml
simple_robot_msgs/action/: GetRobotPose.action
simple_robot_msgs/msg/: TemperatureReading.msg  VictimFound.msg
ultra_complex_communication/: CMakeLists.txt  package.xml
ultra_complex_communication/action/: ultra_complex_communication.action
ultra_complex_communication/launch/: ultra_complex_communication.launch
ultra_complex_communication/src/: prepare_client.cpp  ucm_client.cpp  ucm_client.h  ucm_server.cpp  ucm_server.h  ucm_server_main.cpp
